--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.iml
-.gradle
+LayoutFundamentals/.gradle
 /local.properties
 /.idea/caches
 /.idea/libraries
@@ -11,3 +11,4 @@
 /build
 /captures
 .externalNativeBuild
+.idea
