Register IncidentReporterApplication in manifest.

--- a/IncidentReporter/app/src/main/AndroidManifest.xml
+++ b/IncidentReporter/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
         package="me.jimmyshaw.incidentreporter">
 
     <application
+            android:name=".IncidentReporterApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
