--- a/ImageShowcase/app/build.gradle
+++ b/ImageShowcase/app/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id 'kotlin-android'
 }
 
+def secretPropertiesFile = rootProject.file("app/src/main/assets/secret.properties")
+def secretProperties = new Properties()
+secretProperties.load(new FileInputStream(secretPropertiesFile))
+
 android {
     compileSdk 30
 
@@ -14,6 +18,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField("String", "FLICKR_API_KEY", secretProperties['FLICKR_API_KEY'])
     }
 
     buildTypes {
