--- a/AtomicKotlin/Programming Basics/Hello, World/Exercise 5/task-info.yaml
+++ b/AtomicKotlin/Programming Basics/Hello, World/Exercise 5/task-info.yaml
@@ -8,5 +8,7 @@ files:
   visible: false
   encrypted_text: FL7WT0gXnGozH4Unwg9McddTqhFZqfn0KTxqRjCxG+4=
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: Sun, 28 Nov 2021 18:32:34 UTC
 record: -1
