VarAndVal: complete Ex 4.

--- a/AtomicKotlin/Programming Basics/var & val/Exercise 4/task-info.yaml
+++ b/AtomicKotlin/Programming Basics/var & val/Exercise 4/task-info.yaml
@@ -8,5 +8,7 @@ files:
   visible: false
   encrypted_text: 2QKaoxKFINO+Lt519a8hHPsBT6a2QSD3HsC/OQJql8k=
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: Sun, 28 Nov 2021 20:03:12 UTC
 record: -1
