VarAndVal: complete Ex 5.

--- a/AtomicKotlin/Programming Basics/var & val/Exercise 5/task-info.yaml
+++ b/AtomicKotlin/Programming Basics/var & val/Exercise 5/task-info.yaml
@@ -8,5 +8,7 @@ files:
   visible: false
   encrypted_text: 2QKaoxKFINO+Lt519a8hHMEyHdToT69Pd2pQO3pQnjw=
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: Sun, 28 Nov 2021 20:04:11 UTC
 record: -1
