Data Types: complete exercises.

--- a/AtomicKotlin/Programming Basics/Data Types/Exercise 4/task-info.yaml
+++ b/AtomicKotlin/Programming Basics/Data Types/Exercise 4/task-info.yaml
@@ -8,5 +8,7 @@ files:
   visible: false
   encrypted_text: 33AkhySSjZnreqv6vg59HsYenyWg/8gjuaUqNVl9bCg=
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: Mon, 03 Jan 2022 15:28:47 UTC
 record: -1
