--- a/AtomicKotlin/Programming Basics/Data Types/Exercise 5/task-info.yaml
+++ b/AtomicKotlin/Programming Basics/Data Types/Exercise 5/task-info.yaml
@@ -8,5 +8,7 @@ files:
   visible: false
   encrypted_text: 33AkhySSjZnreqv6vg59Hl8+dFbM7cDPufZA3r5H38Q=
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: Mon, 03 Jan 2022 15:30:54 UTC
 record: -1
