If: finish exercises.

--- a/AtomicKotlin/Programming Basics/if Expressions/Exercise 4/task-info.yaml
+++ b/AtomicKotlin/Programming Basics/if Expressions/Exercise 4/task-info.yaml
@@ -8,5 +8,7 @@ files:
   visible: false
   encrypted_text: WZMcnYepZhoKadArUjuBO/+mF7izxabBkw+g7HQ6SIk=
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  time: Mon, 03 Jan 2022 16:00:25 UTC
 record: -1
